IndividualMiniprojectC++/bugs.txt
Bugs found in Code Clean up
---------------------------
1. ccplint reported that none of the cpp files in src and test has Copyright.
   Errors fixed. 
   <Copyright 2024 <Columbia University> added to all cpp files in src and test.



Bugs found in Static Analysis
-----------------------------
   2 errors were found:
       a. ../external_libraries/Crow-1.2.0-Darwin/include/crow/routing.h:1798:17: error: Rethrowing current exception with 'throw;', it seems there is no current exception to rethrow. If there is no current exception this calls std::terminate(). More: https://isocpp.org/wiki/faq/exceptions#throw-without-an-object [rethrowNoCurrentException]
                throw;
                ^
       b. ../external_libraries/Crow-1.2.0-Darwin/include/crow/logging.h:78:25: error: Uninitialized variable: &my_tm [uninitvar]
            localtime_s(&my_tm, &t);
    But these are both in external Crow library. So not fixed.

    Final message in cppcheck.log:
    "Critical errors
     ---------------
     No critical errors, all files were checked."



Bugs found in Unit Test
------------------------
1. Department.cpp: getDepartmentChair() returns "departmentChair". 
   Fixed to return the value of departmentChair

2. Course.cpp: No get function for enrolledStudentCount
   Added Course::getEnrolledStudentCount()

3. Course::enrollStudent() doesn't check against enrollmentCapacity
   Check added. Return true or false accordingly

4. Course::dropStudent() doesn't check against zero
   Check added. Return true or false accordingly

5. In Course constructor enrolledStudentCount is initialized as 500. It should be zero. Fixed.

6. Course::getCourseTimeSlot() returned instructorName. Fixed.

7. Course::getInstructorName() returned courseTimeSlot. Fixed.

8. Course::isCourseFull() logic is wrong. Should be return enrolledStudentCount > enrollmentCapacity; Fixed.
